--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
             }
         },
         "branch-alias": {
-            "dev-master": "0.1.x-dev"
+            "dev-master": "1.x.x-dev"
         }
     },
     "autoload": {
